@@ -5,6 +5,7 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.FilenameFilter;
 import java.io.IOException;
+import java.lang.ProcessBuilder.Redirect;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -12,24 +13,32 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import nicelee.ui.Global;
-import nicelee.ui.thread.StreamManager;
 
 public class CmdUtil {
 
+	private static final File NULL_FILE = new File(
+            (System.getProperty("os.name")
+                    .startsWith("Windows") ? "NUL" : "/dev/null")
+    );
+	private static final Redirect DISCARD = Redirect.to(NULL_FILE); // 为了兼容 java8
+	
 	public static boolean run(String cmd[]) {
 		Process process = null;
 		try {
-			process = Runtime.getRuntime().exec(cmd);
-			StreamManager errorStream = new StreamManager(process, process.getErrorStream());
-			StreamManager outputStream = new StreamManager(process, process.getInputStream());
-			errorStream.start();
-			outputStream.start();
-			//System.out.println("此处堵塞, 直至process 执行完毕");
+			ProcessBuilder pb = new ProcessBuilder(cmd);
+            if(Global.debugFFmpeg) {
+            	pb.redirectOutput(Redirect.INHERIT);
+            	pb.redirectError(Redirect.INHERIT);
+            }else {
+            	pb.redirectOutput(DISCARD);
+            	pb.redirectError(DISCARD);
+            }
+			process = pb.start();
 			process.waitFor();
 			System.out.println("process 执行完毕");
 			return true;
 		} catch (Exception e) {
-			//e.printStackTrace();
+			// e.printStackTrace();
 			Logger.println(e.toString());
 			return false;
 		}
